--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Hey</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron">
+	<h1>Hey</h1>
+	<p>Click to <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg"%></p>
+</div>
